# dns-parser-revived

./: .gitignore  Cargo.toml
examples/: sync_tcp_client.rs  sync_udp_client.rs
src/: builder.rs  enums.rs  header.rs  lib.rs  name.rs  parser.rs  structs.rs
src/rdata/: a.rs  aaaa.rs  cname.rs  mod.rs  mx.rs  ns.rs  ptr.rs  soa.rs  srv.rs  txt.rs
