[package]
name = "dns-parser-revived"
description = """
    Pure-rust DNS protocol parser library. This does not support network, only
    raw protocol parser.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["dns", "domain", "name", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/kxxt/dns-parser-revived"
documentation = "https://docs.rs/dns-parser-revived"
version = "0.9.0"
edition = "2021"
authors = ["Paul Colomiets <paul@colomiets.name>", "Levi Zim <rsworktech@outlook.com>"]

[features]
serde = ["dep:serde"]

[dependencies]
quick-error = "1.0.0"
byteorder = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
matches = "0.1.2"
